docs: small touch-ups
Stop the presses!

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <h1>Code to Cloud</h1>
 
-        <h2>Code to Cloud is all about developing cloud-native solutions ❤️</h2>
+        <h3>Code to Cloud is all about developing cloud-native solutions ❤️</h3>
 
         <p>
             Using an end-to-end approach to the software development proces.
@@ -69,7 +69,7 @@
             The result: cloud-native solutions that are reliable, scalable and secure.
         </p>
 
-        <h3>Guiding principles</h3>
+        <h3>Guiding principles 🧭</h3>
         <ul>
             <li>Integrity and respect</li>
             <li>Simplicity over complexity</li>
@@ -77,7 +77,7 @@
             <li>Everything is automated</li>
             <li>Security by design</li>
             <li>Clear release and lifecycle management</li>
-            <li>Functional, actionable monitoring</li>
+            <li>Meaningful, actionable monitoring</li>
         </ul>
     </div>
 </body>
